fixed spacing again

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -68,6 +68,12 @@ div.gallery.small img
     margin-left: 10%;
 }
 
+div.content
+{
+    width: 70%;
+    margin-left: 15%;
+}
+
 div.content.left, div.content.right
 {
     width: 80%;
